TS-1272: workaround for - FATAL: HttpSM.cc:890: failed assert